# mario-maker

./: CMakeLists.txt  README.md  license
assets/maps/: map_1.tmx  overworld-tiset.json  playground_world.tmx  test_world.tmx  untitled.json
cmake/modules/: FindTMXLITE.cmake
docs/: CONTRIBUTING.md
include/: AudioIds.h  AudioManager.h  Components.h  Constants.h  ECS.h  Events.h  Game.h  GameMap.h  Map.h  MapCamera.h  MapRenderer.h  Menu.h  SoundId.h  SoundManager.h  TextureRenderer.h  constants.h
include/renderers/: EnemiesRenderer.h  MapRenderer.h  ObjectRenderer.h  Renderer.h  TextRenderer.h  TextureId.h  TextureRenderer.h
include/systems/: AnimationSystem.h  CameraSystem.h  EnemySystem.h  FlagSystem.h  IdsMapSystem.h  PhysicSystem.h  PlayerSystem.h  RenderSystem.h  ScoreSystem.h  SoundSystem.h  TileSystem.h  TimerSystem.h
src/: AudioManager.cpp  Game.cpp  GameMap.cpp  Map.cpp  Map.h  MapCamera.cpp  MapRenderer.cpp  Menu.cpp  Menu.h  SoundManager.cpp  TextureRenderer.cpp  main.cpp
src/renderers/: EnemiesRenderer.cpp  MapRenderer.cpp  ObjectRenderer.cpp  TextRenderer.cpp  TextureRenderer.cpp
src/systems/: AnimationSystem.cpp  CameraSystem.cpp  EnemySystem.cpp  FlagSystem.cpp  IdsMapSystem.cpp  PhysicSystem.cpp  PlayerSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  SoundSystem.cpp  TileSystem.cpp  TimerSystem.cpp
tests/: CMakeLists.txt  testMap.cpp  testTextureRenderer.cpp  testmap.cpp
tests/testmap/: CMakeLists.txt  main.cpp  testmap.cpp  testmap.h
